datepicker: Fix icon alignment

--- a/css/main.css
+++ b/css/main.css
@@ -390,7 +390,7 @@ a.edit { background-image: url(../images/icons/edit.png); }
 a.view { background-image: url(../images/icons/view.png); }
 a.delete { background-image: url(../images/icons/delete.png); }
 a.checked { background-image: url(../images/icons/checked.png); }
-a.datepicker { background-image: url(../images/icons/datepicker.png); margin-left: 3px; }
+a.datepicker { background-image: url(../images/icons/datepicker.png); vertical-align: middle; }
 a.leaderboard { background-image: url(../images/icons/leaderboard.png); }
 
 a.contest_selected { color: black; background-color: #ccccff; padding: 2px; }
